
    * Properly expand target in log_custom if it is a comma-separated list (#9)
        (patch by Emanuele Giaquinta and Korbinian Rosenegger)

	* Don't append extra colon before RPL_TOPICWHOTIME (Korbinian Rosenegger)

	* Adding timed backlog in BACKLOG command without a channel 
	  (Korbinian Rosenegger)

	* Handle disconnects of clients properly (#108)

  FEATURES

    * More advanced help support

	* Add LOG_LEVEL command (#101)

	* Add 'make uninstall' (#95)

	* Do some more config checking (#102)

	* Show disconnect reason in admin network (#100)

	* Add support for handling additional 005 parameters: MAXCHANNELS,
		NICKLEN, MAXBANS, MODES, NICKLEN, MAXBANS, TOPICLEN, KICKLEN, 
		AWAYLEN, MAXTARGETS, WALLCHOPS, WALLVOICES, RFC2812, PENALTY,
		FNC, SAFELIST, USERIP, CNOTICE, KNOCK, VCHANNELS, WHOX, CALLERID,
		ACCEPT, KEYLEN, USERLEN, HOSTLEN, MAXCHANNELLEN, 
		MAXNICKLEN, DEAF, ELIST and SILENCE

	* Default to binding to 127.0.0.1 if no IP was specified in the 
	  listener, instead of 0.0.0.0.

	* Print actual address that a listener bound to.

  INTERNALS

    * Remove is_private from line struct (#12).
		(patch by Emanuele Giaquinta <e.giaquinta@glauco.it>)

	* Implement ISON, USERHOST, WHO, WHOIS, JOIN, PART for admin networks. (#99)

  PORTABILITY

    * Looks for check using pkg-config now.

    * Fix handling of addresses when listening on FreeBSD. (#87)

  DOCUMENTATION
  	
  	* Added more documentation to the help system. (#106)


Ctrlproxy 3.0.1 2007-01-04

  BUG FIXES

    * Logging for network state information has been simplified and been 
	  made less verbose.

	* 324 and 329 replies are now cached.

	* 352 and 315 replies are now (optionally) cached. The "max_who_age" 
	  setting can be set to the number of seconds that results should be cached.
	  This prevents "Excess Flood" errors when connecting using several xchat clients
	  at once. Can be disabled by setting max_who_age=0 (the default).
