@@ -84,11 +84,16 @@ static void server_send_login (struct network *s)
 gboolean network_set_charset(struct network *n, const char *name)
 {
 	GIConv tmp;
-	tmp = g_iconv_open(name, "UTF-8");
 
-	if (tmp == (GIConv)-1) {
-		log_network(LOG_WARNING, n, "Unable to find charset `%s'", name);
-		return FALSE;
+	if (name != NULL) {
+		tmp = g_iconv_open(name, "UTF-8");
+
+		if (tmp == (GIConv)-1) {
+			log_network(LOG_WARNING, n, "Unable to find charset `%s'", name);
+			return FALSE;
+		}
+	} else {
+		tmp = (GIConv)-1;
 	}
 	
 	if (n->connection.outgoing_iconv != (GIConv)-1)
@@ -96,10 +101,14 @@ gboolean network_set_charset(struct network *n, const char *name)
 
 	n->connection.outgoing_iconv = tmp;
 
-	tmp = g_iconv_open("UTF-8", name);
-	if (tmp == (GIConv)-1) {
-		log_network(LOG_WARNING, n, "Unable to find charset `%s'", name);
-		return FALSE;
+	if (name != NULL) {
+		tmp = g_iconv_open("UTF-8", name);
+		if (tmp == (GIConv)-1) {
+			log_network(LOG_WARNING, n, "Unable to find charset `%s'", name);
+			return FALSE;
+		}
+	} else {
+		tmp = (GIConv)-1;
 	}
 
 	if (n->connection.incoming_iconv != (GIConv)-1)
